# factorialhr

./: .flake8  .gitignore  CHANGELOG.md  README.md  README.rst  pyproject.toml
.github/workflows/: build.yml  docs-build.yml  docs-publish.yml  lint.yml  prerelease.yml  publish.yml  release.yml
docs/: api_public.rst  approvals.rst  ats.rst  attendance.rst  authentication.rst  changelog.rst  conf.py  contracts.rst  custom_fields.rst  custom_resources.rst  employees.rst  expenses.rst  finance.rst  holidays.rst  index.rst  integrations.rst  it_management.rst  job_catalog.rst  locations.rst  marketplace.rst  payroll_employees.rst  performance.rst  posts.rst  procurement.rst  project_management.rst  tasks.rst  time_settings.rst  timeoff.rst  trainings.rst  work_schedule.rst
examples/oauth2/: README.md  access_token.py  http_server.py
factorialhr/: __init__.py  endpoints.py  models.py
source/: authentication.rst  banking.rst  bookkeepers_management.rst  changelog.rst  companies.rst  compensations.rst  conf.py  documents.rst  employee_updates.rst  index.rst  payroll.rst  payroll_integrations_base.rst  shift_management.rst  teams.rst  time_planning.rst
src/factorialhr/: __init__.py  _api_public.py  _approvals.py  _ats.py  _attendance.py  _banking.py  _bookkeepers_management.py  _client.py  _common.py  _companies.py  _compensations.py  _contracts.py  _custom_fields.py  _custom_resources.py  _documents.py  _employee_updates.py  _employees.py  _expenses.py  _finance.py  _holidays.py  _integrations.py  _it_management.py  _job_catalog.py  _locations.py  _marketplace.py  _payroll.py  _payroll_employees.py  _payroll_integrations_base.py  _performance.py  _posts.py  _procurement.py  _project_management.py  _shift_management.py  _tasks.py  _teams.py  _time_planning.py  _time_settings.py  _timeoff.py  _trainings.py  _work_schedule.py  (+4 more)
src/factorialhr/_cli/: __init__.py  access_token.py  account.py  common.py  http_server.py  projects.py
src/factorialhr/endpoints/: _base.py  api_public.py  ats.py  attendance.py  employees.py  project_management.py  teams.py  time_planning.py
